Fix the low contrast issue

--- a/docs/scss/components/_link.scss
+++ b/docs/scss/components/_link.scss
@@ -1,5 +1,5 @@
 a.no-decoration {
-    color: $disabledText;
+    color: $bodyText;
     text-decoration: none;
     &:hover {
         text-decoration: underline;
