--- a/docs/scss/components/_reveal-item.scss
+++ b/docs/scss/components/_reveal-item.scss
@@ -14,7 +14,7 @@
         }
         &-title {
             @include body-text(1.5, $medium);
-            color: $disabledText;
+            color: $bodyText;
             margin-bottom: $baseUnit * 0.5;
         }
         &-content {
@@ -49,7 +49,7 @@
                 @include flex(row, center, flex-start);
                 padding: $baseUnit 0;
                 @include body-text(1.3, $medium);
-                color: $disabledText;
+                color: $bodyText;
                 svg {
                     margin-right: $baseUnit * 0.5;
                 }
